infrastructure/kubernetes/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecg-api
  namespace: ecg-production
  labels:
    app.kubernetes.io/name: ecg-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: ethio-cyberguard
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: ecg-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ecg-api
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: api
          image: ghcr.io/abeniyirgalem/ethio-cyberguard-api:v1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "2Gi"
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
          securityContext:
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
