infrastructure/kubernetes/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecg-web
  namespace: ecg-production
  labels:
    app.kubernetes.io/name: ecg-web
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: ethio-cyberguard
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ecg-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ecg-web
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: web
          image: ghcr.io/abeniyirgalem/ethio-cyberguard-web:v1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
